# voxgeometry

./: .gitignore  README.md  package.json  tsconfig.json  vue.config.js
public/wasm/: demomain.js  demomain.wasm  voxcgw.js  voxcgw.wasm
src/: CMakeLists.txt  DesignInfo.txt  voxcg.cc  voxcgeom.cc  voxcgeomConfig.h.in
src/demo/: CMakeLists.txt
src/demo/math/: MatrixComputer.cc  MatrixComputer.h
src/simnav/: CMakeLists.txt
src/simnav/stara/: BinaryHeap.cc  BinaryHeap.h  StNode.cc  StNode.h  StarA.cc  StarA.h
src/voxcgeom/: CMakeLists.txt  cgeomPre.cc  cgeomPre.h
src/voxcgeom/base/: AABB.cc  AABB.h  CMakeLists.txt  Cone.cc  Cone.h  GeomBase.cc  GeomBase.h  LineSegment.cc  LineSegment.h  Plane.cc  Plane.h  RadialLine.cc  RadialLine.h  Sphere.cc  Sphere.h  StraightLine.cc  StraightLine.h  Vec3D.cc  Vec3D.h
src/voxcgeom/calc/: PlaneCalc.cc  PlaneCalc.h
src/voxcgeom/math/: EulerAngles.cc  EulerAngles.h  Matrix4.cc  Matrix4.h  Matrix4Container.cc  Matrix4Container.h  Orientation3D.cc  Orientation3D.h  Quaternion.cc  Quaternion.h  Vec3D.cc  Vec3D.h
src/wasm/: CMakeLists.txt  CarDemo.cc  CarDemo.h  demomain.cc  main.ts  matDemo.cc  transformDemo.cc
src/wasm/app/: MatComputerDemo.ts  TransformDemo.ts
src/wasm/app/trans/: MatTransform.cc  MatTransform.h
